[project]
name = "nerf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "configargparse>=1.7.1",
    "cuda-toolkit>=13.0.1",
    "imageio>=2.37.0",
    "imageio-ffmpeg>=0.6.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "tensorflow>=2.20.0",
    "tqdm>=4.67.1",
]
